tests/macros/raw_select/extension.rs
fn main() {
    let q = requestty::questions![RawSelect { extension: todo!() }];
}
